--- a/.gitignore
+++ b/.gitignore
@@ -253,3 +253,4 @@ dmypy.json
 
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,pycharm+all,python,jupyternotebooks
+test_mesh/
