--- a/.gitignore
+++ b/.gitignore
@@ -254,3 +254,5 @@ dmypy.json
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,pycharm+all,python,jupyternotebooks
 test_mesh/
+
+*.off
