Add configuration file for system compability.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 data/**
 !data/.gitkeep
+config.py
 
 # Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode,pycharm+all,python,jupyternotebooks
 # Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode,pycharm+all,python,jupyternotebooks
