--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/home/olu/anaconda3/envs/mmr/bin/python"
+    "python.pythonPath": "C:\\Users\\ohund\\Anaconda3\\envs\\mmr\\python.exe"
 }
