Impl: automated directory creation and config file

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 data/**
+processed_data/**
 !data/.gitkeep
+!processed_data/.gitkeep
 config.py
 
 # Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode,pycharm+all,python,jupyternotebooks
