Impl: saving the features into file and added exception catcher

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,6 +12,13 @@
             "console": "integratedTerminal"
         },
         {
+            "name": "Python: Olu",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/olu.py",
+            "console": "internalConsole"
+        },
+        {
             "name": "Python: Complicated Algorithm",
             "type": "python",
             "request": "launch",
