Impl: Diff. functions for diff. features pipeline
Still missing sort

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -40,10 +40,17 @@
             "console": "integratedTerminal"
         },
         {
-            "name": "Python: GUI",
+            "name": "Python: Mini GUI",
             "type": "python",
             "request": "launch",
             "program": "${workspaceFolder}/source.py",
+            "console": "integratedTerminal"
+        },
+        {
+            "name": "Python: GUI",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/gui_maker.py",
             "console": "integratedTerminal"
         },
         {
