--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ processed_data*/**
 !processed_data/.gitkeep
 config.py
 .vscode/settings.json
-/tmp/**/*.jsonl
+stats/tmp/**/*.jsonl
 k_all_db_results.csv
 
 # Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode,pycharm+all,python,jupyternotebooks
