--- a/requirements.txt
+++ b/requirements.txt
@@ -15,4 +15,9 @@ multiprocess~=0.70.10
 pymeshfix~=0.14.1
 pyqtgraph~=0.11.0
 scikit-learn~=0.23.2
-scikit-image~=0.17.2
+trimesh~=3.8.11
+vtk~=9.0.1
+pillow~=7.2.0
+sklearn~=0.0
+seaborn~=0.11.0
+annoy~=1.17.0
