--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ config.py
 .vscode/settings.json
 stats/tmp/**/*.jsonl
 k_all_db_results.csv
+trash/tsne*/**
 
 # Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode,pycharm+all,python,jupyternotebooks
 # Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode,pycharm+all,python,jupyternotebooks
