--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,12 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Python: Experiment Module",
+            "type": "python",
+            "request": "launch",
+            "module": "experiments.${fileBasenameNoExtension}"
+        },
+        {
             "name": "Python: Current",
             "type": "python",
             "request": "launch",
