--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,25 @@
-meshio==4.1.1
-numpy==1.19.1
-PyQt5==5.15.0
+seaborn==0.11.0
+scipy==1.5.0
+pyacvd==0.2.5
 pyvista==0.25.3
+scikit_image==0.17.2
+pyqtgraph==0.11.0
+trimesh==3.8.11
+pymeshfix==0.14.1
+matplotlib==3.3.1
+tqdm==4.50.2
+bokeh==2.2.3
+plyfile==0.7.2
+annoy==1.17.0
+jsonlines==1.2.0
+numpy==1.18.5
 pyvistaqt==0.2.0
-pandas~=1.1.1
-matplotlib~=3.3.1
-plyfile~=0.7.2
-pyacvd~=0.2.5
-pygalmesh~=0.7.2
-tqdm~=4.49.0
-anytree~=2.8.0
-jsonlines~=1.2.0
-multiprocess~=0.70.10
-pymeshfix~=0.14.1
-pyqtgraph~=0.11.0
-scikit-learn~=0.23.2
-trimesh~=3.8.11
-vtk~=9.0.1
-pillow~=7.2.0
-sklearn~=0.0
-seaborn~=0.11.0
-annoy~=1.17.0
+pandas==1.1.1
+networkx==2.5
+anytree==2.8.0
+multiprocess==0.70.10
+sknw==0.14
+Pillow==8.0.1
+PyQt5==5.15.1
+scikit_learn==0.23.2
+skimage==0.0
