--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-  "DATA_PATH_PSB" : "",
-  "DATA_PATH_NORMED":"",
-  "CLASS_FILE":"",
-  "CLASS_FILE_COARSE":"",
-  "FEATURE_DATA_FILE":"",
-  "STAT_PATH":""
+  "DATA_PATH_PSB" : "D:\\Documents\\3DStuff\\Datasets\\psb_v1\\benchmark\\db",
+  "DATA_PATH_NORMED":"D:\\Documents\\Programming\\Python\\project_multimedia_retrieval\\processed_data",
+  "CLASS_FILE":"D:\\Documents\\3DStuff\\Datasets\\psb_v1\\benchmark\\classification\\v1\\base",
+  "CLASS_FILE_COARSE":"D:\\Documents\\3DStuff\\Datasets\\psb_v1\\benchmark\\classification\\v1\\coarse1",
+  "FEATURE_DATA_FILE":"D:\\Documents\\Programming\\Python\\project_multimedia_retrieval\\stats\\2020-11-02-features.jsonl",
+  "STAT_PATH":"D:\\Documents\\Programming\\Python\\project_multimedia_retrieval\\stats"
 }
