--- a/config.json
+++ b/config.json
@@ -1,8 +1,1 @@
-{
-  "DATA_PATH_PSB": "D:\\Documents\\Programming\\Python\\project_multimedia_retrieval\\datasets\\psb",
-  "DATA_PATH_NORMED": "D:\\Documents\\Programming\\Python\\project_multimedia_retrieval\\datasets\\normed_psb",
-  "CLASS_FILE": "D:\\Documents\\Programming\\Python\\project_multimedia_retrieval\\datasets\\psb\\benchmark\\classification\\v1\\base",
-  "CLASS_FILE_COARSE": "D:\\Documents\\Programming\\Python\\project_multimedia_retrieval\\datasets\\psb\\benchmark\\classification\\v1\\coarse1",
-  "FEATURE_DATA_FILE": "D:\\Documents\\Programming\\Python\\project_multimedia_retrieval\\stats\\2020-11-02-features.jsonl",
-  "STAT_PATH": "D:\\Documents\\Programming\\Python\\project_multimedia_retrieval\\stats"
-}
+{"DATA_PATH_PSB": "D:\\Documents\\3DStuff\\Datasets\\psb_v1\\benchmark\\db", "DATA_PATH_NORMED": "D:\\Documents\\Programming\\Python\\project_multimedia_retrieval\\datasets\\normed_psb", "CLASS_FILE": "D:\\Documents\\Programming\\Python\\project_multimedia_retrieval\\datasets\\psb\\benchmark\\classification\\v1\\base", "CLASS_FILE_COARSE": "D:\\Documents\\Programming\\Python\\project_multimedia_retrieval\\datasets\\psb\\benchmark\\classification\\v1\\coarse1", "FEATURE_DATA_FILE": "C:\\Users\\Filippo\\Desktop\\VisionLanguageExamFiles", "STAT_PATH": "D:\\Documents\\Programming\\Python\\project_multimedia_retrieval\\stats"}
