--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ config.py
 stats/tmp/**/*.jsonl
 k_all_db_results.csv
 trash/tsne*/**
-k_all_*.csv
+k_all_db_*.csv
 # Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode,pycharm+all,python,jupyternotebooks
 # Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode,pycharm+all,python,jupyternotebooks
 
